[package]
name = "fog-math"
version = "0.1.0"
edition = "2021"
authors = ["Scott Teal"]
repository = "https://github.com/Cognoscan/fog-math"
homepage = "https://github.com/Cognoscan/fog-math"
license = "MIT OR Apache-2.0"
description = "Math encoding format using fog-pack, in the style of MathML"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fog-pack = "0.3"
regex = "1"
serde = "1"
